--- a/css/css.css
+++ b/css/css.css
@@ -150,7 +150,8 @@ section{
       background-color: rgb(117, 102, 80);
       opacity: 0.7;
     }
-      
+
+
   .login{
     position: absolute;
     left: 50%;
@@ -184,6 +185,21 @@ section{
           left: 50%;
           transform: translate(-50%, -50%);
           display: block;
+        }
+         .login_close{
+          width: 50px;
+          height: 50px;
+        }
+        .login_close span{
+          width: 20px;
+          height: 20px;
+        }
+
+        .login_close span::before{
+          content: "";
+          width: 20px;
+          height: 20px;
+          border-bottom: 3px solid #000000;
         }
       .login>form{
         height: 300px;
