--- a/css/css.css
+++ b/css/css.css
@@ -10,7 +10,6 @@ body {
     font-family: 'EliceDigitalBaeum_Regular';
 }
 
-
 /*전체 폰트*/
 
 @font-face {
@@ -26,16 +25,16 @@ body {
     background-color: #00d2ff;
 }
 
-.banner>img {
-    margin: 0 auto;
-    display: block;
-}
+    .banner>img {
+        margin: 0 auto;
+        display: block;
+    }
 
-.banner>img:nth-of-type(2) {
-    position: fixed;
-    top: 0;
-    left: 0;
-}
+    .banner>img:nth-of-type(2) {
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
 
 section {
     width: 100%;
@@ -43,57 +42,57 @@ section {
     margin: 0 auto;
 }
 
-.art_1 {
-    width: 100%;
-    height: auto;
-    background-color: rgba(209, 151, 74, 0.7);
-    margin: 0 auto;
-    padding: 50px 0;
-    box-sizing: border-box;
-}
+    .art_1 {
+        width: 100%;
+        height: auto;
+        background-color: rgba(209, 151, 74, 0.7);
+        margin: 0 auto;
+        padding: 50px 0;
+        box-sizing: border-box;
+    }
 
-.first,
-.last {
-    max-width: 800px;
-    height: 100px;
-    background-color: thistle;
-    margin: 0 auto;
-}
+        .first,
+        .last {
+            max-width: 800px;
+            height: 100px;
+            background-color: thistle;
+            margin: 0 auto;
+        }
 
-.first {
-    text-align: center;
-    line-height: 50px;
-}
+        .first {
+            text-align: center;
+            line-height: 50px;
+        }
 
-.first>h1 {
-    font-size: 2em;
-}
+            .first>h1 {
+                font-size: 2em;
+            }
 
-.coupon_container {
-    max-width: 800px;
-    height: 600px;
-    background-color: white;
-    margin: 20px auto;
-    border-radius: 50px;
-    padding: 20px;
-}
+        .coupon_container {
+            max-width: 800px;
+            height: 600px;
+            background-color: white;
+            margin: 20px auto;
+            border-radius: 50px;
+            padding: 20px;
+        }
 
-.coupon_header {
-    width: 400px;
-    height: 100px;
-    background-color: blue;
-    margin: 0 auto;
-}
+            .coupon_header {
+                width: 400px;
+                height: 100px;
+                background-color: blue;
+                margin: 0 auto;
+            }
 
-.coupon,
-.coupon_info {
-    width: 400px;
-    height: 200px;
-    background-color: red;
-    margin: 0 auto;
-    margin-top: 10px;
-    cursor: pointer;
-}
+            .coupon,
+            .coupon_info {
+                width: 400px;
+                height: 200px;
+                background-color: red;
+                margin: 0 auto;
+                margin-top: 10px;
+                cursor: pointer;
+            }
 
 .art_2 {
     width: 100%;
@@ -102,34 +101,33 @@ section {
     margin: 0 auto;
 }
 
-.second_1 {
-    max-width: 200px;
-    height: 100px;
-    background-color: coral;
-    margin: 0 auto;
-}
+    .second_1 {
+        max-width: 200px;
+        height: 100px;
+        background-color: coral;
+        margin: 0 auto;
+    }
 
-.second_2 {
-    max-width: 400px;
-    height: 200px;
-    background-color: red;
-    margin: 0 auto;
-}
+    .second_2 {
+        max-width: 400px;
+        height: 200px;
+        background-color: red;
+        margin: 0 auto;
+    }
 
-.second_3 {
-    max-width: 800px;
-    height: 300px;
-    background-color: cyan;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-around;
-}
-
-.second_3>div {
-    width: 180px;
-    height: 200px;
-    background-color: seagreen;
-}
+    .second_3 {
+        max-width: 800px;
+        height: 300px;
+        background-color: cyan;
+        margin: 0 auto;
+        display: flex;
+        justify-content: space-around;
+    }
+        .second_3>div {
+            width: 180px;
+            height: 200px;
+            background-color: seagreen;
+        }
 
 .art_3 {
     width: 100%;
@@ -140,143 +138,143 @@ section {
     margin: 0 auto;
 }
 
-.third {
-    width: 250px;
-    height: 500px;
-    margin-top: 20px;
-    background-color: #fff;
-    margin: 10px;
-    position: relative;
-}
+    .third {
+        width: 250px;
+        height: 500px;
+        margin-top: 20px;
+        background-color: #fff;
+        margin: 10px;
+        position: relative;
+    }
 
-.third1_box1 {
-    width: 250px;
-    height: 230px;
-}
+        .third1_box1 {
+            width: 250px;
+            height: 230px;
+        }
 
-.third1_box1 img {
-    width: 100%;
-    height: 100%;
-}
+            .third1_box1 img {
+                width: 100%;
+                height: 100%;
+            }
 
-.third1_text1 {
-    width: 250px;
-    height: 150px;
-    text-align: center;
-}
+        .third1_text1 {
+            width: 250px;
+            height: 150px;
+            text-align: center;
+        }
 
-.third1_text1 h3 {
-    margin: 30px;
-}
+            .third1_text1 h3 {
+                margin: 30px;
+            }
 
-.third1_btn1 {
-    width: 150px;
-    height: 50px;
-    align-items: center;
-    position: absolute;
-    bottom: 5%;
-    left: 20%;
-}
+        .third1_btn1 {
+            width: 150px;
+            height: 50px;
+            align-items: center;
+            position: absolute;
+            bottom: 5%;
+            left: 20%;
+        }
 
-.third1_btn1 button {
-    width: 150px;
-    height: 50px;
-    background-color: #333;
-    color: #fff;
-    font-size: 20px;
-    cursor: pointer;
-}
+            .third1_btn1 button {
+                width: 150px;
+                height: 50px;
+                background-color: #333;
+                color: #fff;
+                font-size: 20px;
+                cursor: pointer;
+            }
 
-.third1_btn1 a {
-    text-decoration: none;
-    color: #fff;
-}
+                .third1_btn1 a {
+                    text-decoration: none;
+                    color: #fff;
+                }
 
-.third2_box2 {
-    width: 250px;
-    height: 230px;
-}
+            .third2_box2 {
+                width: 250px;
+                height: 230px;
+            }
 
-.third2_box2 img {
-    width: 100%;
-    height: 100%;
-}
+                .third2_box2 img {
+                    width: 100%;
+                    height: 100%;
+                }
 
-.third2_text2 {
-    width: 250px;
-    height: 150px;
-    text-align: center;
-}
+            .third2_text2 {
+                width: 250px;
+                height: 150px;
+                text-align: center;
+            }
 
-.third2_text2 h3 {
-    margin: 30px;
-}
+                .third2_text2 h3 {
+                    margin: 30px;
+                }
 
-.third2_btn2 {
-    width: 150px;
-    height: 50px;
-    align-items: center;
-    position: absolute;
-    bottom: 5%;
-    left: 20%;
-}
+        .third2_btn2 {
+            width: 150px;
+            height: 50px;
+            align-items: center;
+            position: absolute;
+            bottom: 5%;
+            left: 20%;
+        }
 
-.third2_btn2 button {
-    width: 150px;
-    height: 50px;
-    background-color: #333;
-    color: #fff;
-    font-size: 20px;
-    cursor: pointer;
-}
+            .third2_btn2 button {
+                width: 150px;
+                height: 50px;
+                background-color: #333;
+                color: #fff;
+                font-size: 20px;
+                cursor: pointer;
+            }
 
-.third2_btn2 a {
-    text-decoration: none;
-    color: #fff;
-}
+                .third2_btn2 a {
+                    text-decoration: none;
+                    color: #fff;
+                }
 
-.third3_box3 {
-    width: 250px;
-    height: 230px;
-}
+        .third3_box3 {
+            width: 250px;
+            height: 230px;
+        }
 
-.third3_box3 img {
-    width: 100%;
-    height: 100%;
-}
+            .third3_box3 img {
+                width: 100%;
+                height: 100%;
+            }
 
-.third3_text3 {
-    width: 250px;
-    height: 150px;
-    text-align: center;
-}
+        .third3_text3 {
+            width: 250px;
+            height: 150px;
+            text-align: center;
+        }
 
-.third3_text3 h3 {
-    margin: 30px;
-}
+            .third3_text3 h3 {
+                margin: 30px;
+            }
 
-.third3_btn3 {
-    width: 150px;
-    height: 50px;
-    align-items: center;
-    position: absolute;
-    bottom: 5%;
-    left: 20%;
-}
+        .third3_btn3 {
+            width: 150px;
+            height: 50px;
+            align-items: center;
+            position: absolute;
+            bottom: 5%;
+            left: 20%;
+        }
 
-.third3_btn3 button {
-    width: 150px;
-    height: 50px;
-    background-color: #333;
-    color: #fff;
-    font-size: 20px;
-    cursor: pointer;
-}
+            .third3_btn3 button {
+                width: 150px;
+                height: 50px;
+                background-color: #333;
+                color: #fff;
+                font-size: 20px;
+                cursor: pointer;
+            }
 
-.third3_btn3 a {
-    text-decoration: none;
-    color: #fff;
-}
+                .third3_btn3 a {
+                    text-decoration: none;
+                    color: #fff;
+                }
 
 .login_bg {
     position: absolute;
@@ -289,12 +287,11 @@ section {
     box-sizing: border-box;
     display: none;
 }
-
-.wrap>.login_Bgpop {
-    display: block;
-    background-color: rgb(117, 102, 80);
-    opacity: 0.7;
-}
+    .wrap>.login_Bgpop {
+        display: block;
+        background-color: rgb(117, 102, 80);
+        opacity: 0.7;
+    }
 
 .login {
     position: absolute;
@@ -306,76 +303,76 @@ section {
     transform: translateX(-50%);
 }
 
-.login_effect {
-    display: block;
-    background-color: #ffffff;
-}
+    .login_effect {
+        display: block;
+        background-color: #ffffff;
+    }
 
 
 /*로그인 팝업 효과*/
 
-.login_box {
-    width: 600px;
-    height: 100px;
-    background-color: #ffffff;
-    margin: 10px;
-}
-
-.login_banner {
-    height: 300px;
-    position: relative;
-}
-
-.login_banner>img {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: block;
-}
-
-.login_close {
-    width: 50px;
-    height: 50px;
-}
-
-.login_close span {
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: 30px;
-    left: 10px;
-    cursor: pointer;
-}
-
-    .login_close span::before {
-        content: "";
-        display: block;
-        width: 30px;
-        height: 3px;
-        background-color: #000000;
-        transform: rotate(45deg);
-        transform-origin: center;
-        transition: .5s ease-in-out;
+    .login_box {
+        width: 600px;
+        height: 100px;
+        background-color: #ffffff;
+        margin: 10px;
     }
-    .login_close span::after {
-        content: "";
-        display: block;
-        width: 30px;
-        height: 3px;
-        background-color: #000000;
-        transform: rotate(-45deg);
-        transform-origin: 11px;
-        transition: .5s ease-in-out;
+
+    .login_banner {
+        height: 300px;
+        position: relative;
     }
-    .login_close span:hover::before{
-        transform: rotate(60deg);
-        transition: .5s ease-in-out;
-    }
-    .login_close span:hover::after{
-        transform: rotate(-60deg);
-        transition: .5s ease-in-out;
-    }
+
+        .login_banner>img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: block;
+        }
+
+            .login_close {
+                width: 50px;
+                height: 50px;
+            }
+
+                .login_close span {
+                    width: 50px;
+                    height: 50px;
+                    position: absolute;
+                    top: 30px;
+                    left: 10px;
+                    cursor: pointer;
+                }
+
+                    .login_close span::before {
+                        content: "";
+                        display: block;
+                        width: 30px;
+                        height: 3px;
+                        background-color: #000000;
+                        transform: rotate(45deg);
+                        transform-origin: center;
+                        transition: .5s ease-in-out;
+                    }
+                    .login_close span::after {
+                        content: "";
+                        display: block;
+                        width: 30px;
+                        height: 3px;
+                        background-color: #000000;
+                        transform: rotate(-45deg);
+                        transform-origin: 11px;
+                        transition: .5s ease-in-out;
+                    }
+                    .login_close span:hover::before{
+                        transform: rotate(60deg);
+                        transition: .5s ease-in-out;
+                    }
+                    .login_close span:hover::after{
+                        transform: rotate(-60deg);
+                        transition: .5s ease-in-out;
+                    }
 
 
 
@@ -386,26 +383,43 @@ section {
     justify-content: center;
     align-items: center;
 }
-
-    .login>form>label>input {
-        width: 300px;
-        height: 40px;
-        margin: 10px 0;
-    }
-
     .login>form>input {
         width: 300px;
         height: 100px;
         margin: 10px 0;
         background-color: #4383FF;
     }
-.find_info{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50px;
-}
-    .find_info>div:nth-of-type(2)
-    {
-        margin: 0 10px;
+    .login>form>label>input {
+        width: 300px;
+        height: 40px;
+        margin: 10px 0;
     }
+
+  
+    .find_info{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 50px;
+    }
+        .find_info>div:nth-of-type(2)
+        {
+            margin: 0 10px;
+        }
+
+
+    .start_sns{
+        display: flex;
+        justify-content: center;
+    }
+            .start_sns > div{
+                width: 23%;
+                height: 50%;
+                margin: 0 10px;
+            }    
+            .sns_left{
+                background-color: yellow;
+            }
+            .sns_right{
+                background-color: green;
+            }
