--- a/css/css.css
+++ b/css/css.css
@@ -388,6 +388,8 @@ section {
         height: 100px;
         margin: 10px 0;
         background-color: #4383FF;
+        color: #ffffff;
+        cursor: pointer;
     }
     .login>form>label>input {
         width: 300px;
@@ -423,3 +425,19 @@ section {
             .sns_right{
                 background-color: green;
             }
+
+    .login_footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }        
+        .foot_info{
+            width: 300px;
+            height: auto;
+            background-color: #333;
+            color: #ffffff;
+            text-align: center;
+            font-size: 0.7em;
+            padding: 20px;
+            box-sizing: border-box;
+        }
