--- a/css/css.css
+++ b/css/css.css
@@ -94,40 +94,81 @@ section {
                 cursor: pointer;
             }
 
-.art_2 {
-    width: 100%;
-    height: auto;
-    background-color: rgb(79, 150, 209);
-    margin: 0 auto;
-}
-
-    .second_1 {
-        max-width: 200px;
-        height: 100px;
-        background-color: coral;
-        margin: 0 auto;
-    }
-
-    .second_2 {
-        max-width: 400px;
-        height: 200px;
-        background-color: red;
-        margin: 0 auto;
-    }
-
-    .second_3 {
-        max-width: 800px;
-        height: 300px;
-        background-color: cyan;
-        margin: 0 auto;
-        display: flex;
-        justify-content: space-around;
-    }
-        .second_3>div {
-            width: 180px;
-            height: 200px;
-            background-color: seagreen;
-        }
+            .art_2{
+                width: 100%;
+                height: auto;
+                background-color:rgb(79, 150, 209);
+                margin: 0 auto;
+                padding:50px;
+              }
+                  .second_1{
+                    max-width: 500px;
+                    height: 100px;
+                    margin: 0 auto;
+                    text-align: center;
+                    padding:30px 0 0;
+                  }
+            
+                  .second_1 h1 {
+                    font-size:36px;
+                    color:aliceblue;
+                    letter-spacing: 1px;
+                    margin:10px 0;
+                  }
+            
+                  .second_1 .text1 {
+                    font-size:18px;
+                    line-height:35px;
+                  }
+            
+                  .second_2{
+                    max-width: 800px;
+                    height: 200px;
+                    margin: 60px auto;
+                    display:flex;
+                    justify-content:space-evenly;
+                    align-items:center;
+                  }
+            
+                  .second_2 .sub {
+                    width:140px;
+                    height: 180px;
+                  }
+            
+                  .sub {
+                    text-align: center;
+                  }
+            
+                  .second_3{
+                    max-width: 1200px;
+                    height: 450px; 
+                    background-color:white;
+                    margin: 0 auto;
+                    display:flex;
+                    justify-content: space-evenly;
+                    align-items: center;
+                  }
+            
+                  .second_3 .product {
+                    width: 250px;
+                    height:300px;
+                    padding:20px 40px;
+                    box-sizing: border-box;
+                    background-color:rgb(124, 189, 51);
+                    text-align: center;
+                    display:flex;
+                    flex-direction:column;
+                    justify-content: space-between;
+                  }
+            
+                  .product img {
+                    width:174px;
+                    
+                  }
+            
+                  /* #second_3:not(:nth-child(1)) {
+                    display:none;
+                  } */
 
 .art_3 {
     width: 100%;
