--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,3 @@
 @charset "UTF-8";
 
-    *{margin: 0; padding: 0; font-family: 'EliceDigitalBaeum_Regular';}
+    *{margin: 0; padding: 0; box-sizing:border-box; font-family: 'EliceDigitalBaeum_Regular';}
