--- a/css/css.css
+++ b/css/css.css
@@ -133,10 +133,14 @@ section {
                   .second_2 .sub {
                     width:140px;
                     height: 180px;
-                  }
-            
-                  .sub {
                     text-align: center;
+                    border:1px solid #333;
+                    padding:10px;
+                    border-radius:5%;
+                  }
+
+                  .second_2 .sub:hover {
+                    opacity:0.7;
                   }
             
                   .second_3{
@@ -147,6 +151,7 @@ section {
                     display:flex;
                     justify-content: space-evenly;
                     align-items: center;
+                    box-shadow:1px 1px 1px 1px #ddd;
                   }
             
                   .second_3 .product {
@@ -154,7 +159,6 @@ section {
                     height:300px;
                     padding:20px 40px;
                     box-sizing: border-box;
-                    background-color:rgb(124, 189, 51);
                     text-align: center;
                     display:flex;
                     flex-direction:column;
@@ -163,7 +167,7 @@ section {
             
                   .product img {
                     width:174px;
-                    
+                    box-shadow: 2px 2px 2px 2px #666;
                   }
             
                   /* #second_3:not(:nth-child(1)) {
