--- a/css/css.css
+++ b/css/css.css
@@ -169,6 +169,12 @@ section {
                     width:174px;
                     box-shadow: 2px 2px 2px 2px #666;
                   }
+
+                  #product_a img {
+                    width:174px;
+                    height:290px;
+                    object-fit: cover;
+                  }
             
                   /* #second_3:not(:nth-child(1)) {
                     display:none;
