--- a/css/css.css
+++ b/css/css.css
@@ -128,6 +128,13 @@ section {
                 flex-direction: column;
                 justify-content: space-around;
                 text-align: center;
+                transition: 0.5s ease-in-out;
+
+            }
+            .coupon:hover{
+                transform: scale(1.05);
+                transition: 0.3s ease-in-out;
+                box-shadow: 5px 5px 5px #666 ;
             }
             .coupon3 {
                 margin: 30px auto;
@@ -149,28 +156,38 @@ section {
                     .info_box3 {
                     }
 
-    .art_1>img{
+    .art1_imgBox{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 1500px;
+        z-index: -1;
+    }
+    .art_1 img{
         position: absolute;
     }                
-    .art_1>img:nth-of-type(1){
-        top: 10%;
+    .art1_imgBox>img:nth-of-type(1){
+        top: 0%;
         left: 25%;
     } 
-    .art_1>img:nth-of-type(2){
-        top: 30%;
-       right: 25%;
+    .art1_imgBox>img:nth-of-type(2){
+        top: 20%;
+       right:25%;
     } 
-    .art_1>img:nth-of-type(3){
-        top: 0;
-        left: 30%;
+    .art1_imgBox>img:nth-of-type(3){
+        top: 40%;
+        left: 15%;
+        transform: rotate(-45deg);
     } 
-    .art_1>img:nth-of-type(4){
-        top: 0;
-        left: 40%;
+    .art1_imgBox>img:nth-of-type(4){
+        bottom: -10%;
+        left: 25%;
     } 
-    .art_1>img:nth-of-type(5){
-        top: 0;
-        left: 50%;
+    .art1_imgBox>img:nth-of-type(5){
+        bottom: 40%;
+        right: 25%
     } 
 
 
