--- a/css/css.css
+++ b/css/css.css
@@ -121,12 +121,12 @@ section {
 
             .art_2{
                 width: 100%;
-                height: auto;
+                height: 950px;
                 background-color:rgb(79, 150, 209);
                 margin: 0 auto;
-                padding:50px;
+                padding:50px 0;
               }
-                  .second_1{
+                  .sec_box1{
                     max-width: 500px;
                     height: 100px;
                     margin: 0 auto;
@@ -134,19 +134,19 @@ section {
                     padding:30px 0 0;
                   }
             
-                  .second_1 h1 {
+                  .sec_box1 h1 {
                     font-size:36px;
                     color:aliceblue;
                     letter-spacing: 1px;
                     margin:10px 0;
                   }
             
-                  .second_1 .text1 {
+                  .sec_box1 .text1 {
                     font-size:18px;
                     line-height:35px;
                   }
             
-                  .second_2{
+                  .sec_box2{
                     max-width: 800px;
                     height: 200px;
                     margin: 60px auto;
@@ -155,7 +155,7 @@ section {
                     align-items:center;
                   }
             
-                  .second_2 .sub {
+                  .sec_box2 .sub {
                     width:140px;
                     height: 180px;
                     text-align: center;
@@ -164,24 +164,35 @@ section {
                     border-radius:5%;
                   }
 
-                  .second_2 .sub:hover {
+                  .sec_box2 .sub:hover {
                     opacity:0.7;
                   }
             
-                  .second_3{
+                  #second_3 {
+                    position:relative;
+                    height:450px;
+                    width:1000px;
+                    margin:0 auto;
+
+                  }
+
+                  .sec_box3{
                     max-width: 1200px;
                     height: 450px; 
-                    background-color:white;
+                    background-color:#fff;
                     margin: 0 auto;
                     display:flex;
                     justify-content: space-evenly;
                     align-items: center;
-                    box-shadow:1px 1px 1px 1px #ddd;
+                    box-shadow:1px 1px 1px 1px #666;
+                    position:absolute;
+                    top:0;
+                    left:0;
                   }
+                 
             
-                  .second_3 .product {
+                  .sec_box3 .product {
                     width: 250px;
-                    height:300px;
                     padding:20px 40px;
                     box-sizing: border-box;
                     text-align: center;
@@ -189,27 +200,14 @@ section {
                     flex-direction:column;
                     justify-content: space-between;
                   }
-            
+                 
+
                   .product img {
                     width:174px;
                     box-shadow: 2px 2px 2px 2px #666;
                     margin-bottom:10px;
                   }
-
-                  #product_a img {
-                    width:174px;
-                    height:290px;
-                    object-fit: cover;
-                  }
-
-                  #product_b {
-                    width:174px;
-                    height:290px;
-                  }
-            
-                  /* #second_3:not(:nth-child(1)) {
-                    display:none;
-                  } */
+ 
 
 .art_3 {
     width: 100%;
