--- a/css/css.css
+++ b/css/css.css
@@ -329,12 +329,7 @@ section {
 .third1_box1 {
     width: 385px;
     height: 400px;
-}
-
-.third1_box1 img {
-    width: 100%;
-    height: 100%;
-    background-image: url("img/art3/1.png");
+    background-image: url("/img/art3/1.png");
 }
 
 .third1_text1 {
@@ -374,11 +369,7 @@ section {
 .third2_box2 {
     width: 385px;
     height: 400px;
-}
-
-.third2_box2 img {
-    width: 100%;
-    height: 100%;
+    background-image: url('/img/art3/2.png');
 }
 
 .third2_text2 {
@@ -418,11 +409,7 @@ section {
 .third3_box3 {
     width: 385px;
     height: 400px;
-}
-
-.third3_box3 img {
-    width: 100%;
-    height: 100%;
+    background-image: url("/img/art3/3.png");
 }
 
 .third3_text3 {
