--- a/css/css.css
+++ b/css/css.css
@@ -20,16 +20,16 @@ body {
     font-style: normal;
 }
 
-.banner {
-    width: 100%;
-    height: 900px;
-    background-color: #00d2ff;
-}
+    .banner {
+        width: 100%;
+        height: 900px;
+        background-color: #00d2ff;
+    }
 
-.banner>img {
-    margin: 0 auto;
-    display: block;
-}
+        .banner>img {
+            margin: 0 auto;
+            display: block;
+        }
 
 .banner>img:nth-of-type(2) {
     position: fixed;
@@ -475,7 +475,7 @@ section {
     left: 50%;
     max-width: 1200px;
     margin: 0 auto;
-    height: 1200px;
+    height: 900px;
     display: none;
     transform: translateX(-50%);
 }
@@ -489,11 +489,14 @@ section {
 /*로그인 팝업 효과*/
 
 .login_box {
-    width: 600px;
+    width: 400px;
     height: 100px;
-    background-color: #fff;
     margin: 10px;
+   
 }
+    .login_box img{
+        width: 150px;
+    }
 
 .login_banner {
     height: 300px;
@@ -575,6 +578,7 @@ section {
     width: 300px;
     height: 40px;
     margin: 10px 0;
+    border: 1px solid;
 }
 
 .find_info {
@@ -589,23 +593,18 @@ section {
 }
 
 .start_sns {
+    height: 50px;
     display: flex;
     justify-content: center;
 }
 
 .start_sns>div {
-    width: 23%;
+    width: 150px;
     height: 50%;
-    margin: 0 10px;
+    margin: 0 5px;
 }
 
-.sns_left {
-    background-color: yellow;
-}
 
-.sns_right {
-    background-color: green;
-}
 
 .login_footer {
     display: flex;
