--- a/css/css.css
+++ b/css/css.css
@@ -67,7 +67,7 @@ section {
 .first {
     text-align: center;
     line-height: 50px;
-    text-shadow: 5px 5px 10px #000000;
+    text-shadow: 5px 5px 10px #000;
 }
 
 .first>p {
@@ -490,7 +490,6 @@ section {
 
 .login_box {
     width: 400px;
-    height: 100px;
     margin: 10px;
    
 }
@@ -530,7 +529,7 @@ section {
     display: block;
     width: 30px;
     height: 3px;
-    background-color: #000000;
+    background-color: #000;
     transform: rotate(45deg);
     transform-origin: center;
     transition: .5s ease-in-out;
@@ -541,7 +540,7 @@ section {
     display: block;
     width: 30px;
     height: 3px;
-    background-color: #000000;
+    background-color: #000;
     transform: rotate(-45deg);
     transform-origin: 11px;
     transition: .5s ease-in-out;
@@ -569,7 +568,7 @@ section {
     width: 300px;
     height: 100px;
     margin: 10px 0;
-    background-color: #4383FF;
+    background-color: #06B9F2;
     color: #fff;
     cursor: pointer;
 }
@@ -622,6 +621,108 @@ section {
     padding: 20px;
     box-sizing: border-box;
 }
+
+
+
+.join_av_bg{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #000;
+    opacity: 0.7;
+    display: none;
+}
+   
+.join_av{
+    width: 400px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    display: none;
+}
+.join_effect{
+    display: block;
+}
+    .join_close{
+        width: 50px;
+        height: 50px;
+    }
+        .join_close span {
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            top: 30px;
+            left: 10px;
+            cursor: pointer;
+        }
+        
+        .join_close span::before {
+            content: "";
+            display: block;
+            width: 30px;
+            height: 3px;
+            background-color: #000;
+            transform: rotate(45deg);
+            transform-origin: center;
+            transition: .5s ease-in-out;
+        }
+        
+        .join_close span::after {
+            content: "";
+            display: block;
+            width: 30px;
+            height: 3px;
+            background-color: #000;
+            transform: rotate(-45deg);
+            transform-origin: 11px;
+            transition: .5s ease-in-out;
+        }
+        
+        .join_close span:hover::before {
+            transform: rotate(60deg);
+            transition: .5s ease-in-out;
+        }
+        
+        .join_close span:hover::after {
+            transform: rotate(-60deg);
+            transition: .5s ease-in-out;
+        }
+
+    
+    .join_banner{
+        width: 100%;
+        height: 300px;
+        position: relative;
+    }
+        .join_banner>img{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+    .join_av .join_form{
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+        .join_form input{
+            width: 300px;
+            height: 40px;
+            border: 2px solid;
+            margin: 10px 0;
+
+        }
+        .join_form>input{
+            background-color: #06B9F2;
+        }
+
 
 
 /*.login_bg end*/
