--- a/css/css.css
+++ b/css/css.css
@@ -268,6 +268,7 @@ section {
     margin: 0 auto;
 }
 
+
 .sec_box3 {
     max-width: 1200px;
     height: 450px;
@@ -291,6 +292,9 @@ section {
     flex-direction: column;
     justify-content: space-between;
 }
+    .sec_box_2>.product:nth-of-type(4){
+        height: 412px;
+    }
 
 .product img {
     width: 174px;
