--- a/css/sub.css.css
+++ b/css/sub.css.css
@@ -26,7 +26,7 @@
     .text span{color: #0061A8; font-weight: bold;}
     .text h5{color: black; font-size: 14px; float: right; margin: 140px 50px 0 0px;}
 
-    .imgbox{width: 900px; height: 260px; background-color: #eee; margin: 20px 50px ;}
+    .imgbox{width: 900px; height: 260px; background-color: #eee; margin: 0 auto ;}
     .imgbox img{width: 180px; height: 230px; margin: 15px 0px 0 20px;}
     .img_text{width: 450px; height: 260px; float: right; margin: 0px 27px 0 0px;}
     .img_text h5{font-size: 24px; text-align: center; margin: 30px 0 0 0px;}
@@ -35,7 +35,12 @@
     .down p{width: 80px; font-size: 14px; border: 1px solid #0061A8; border-radius: 30px; padding: 5px 10px; margin: 12px 0 0 50px;}
     .down span{font-size: 14px; float: right; margin: -25px 15px 0 0px;}
 
-    .textbox{width: 900px; float: left; margin: 100px 0 0 120px;}
+    .textbox{width: 900px; height: 100px;
+        position: absolute;
+        top: 70%;
+        left: 51%;
+        transform: translate(-50%,-50%);
+    }
     .textbox ul li{color: black;}
 
     /* css : sub:2 */
@@ -63,7 +68,7 @@
 			.header_box span{width: 500px; text-align: center; float: left; font-size: 20px; color: #fff; margin: 100px 0 0 350px; font-family: 'Cafe24Ssurround';}
 
 			section{width: 100%; height: 1700px; background-color: #2978B5; margin: 0 auto;display: flex;}
-			.event_box{width: 1200px; height: 100%; background-color: pink; margin: 0 auto; }
+			.event_box{width: 1200px; height: 60%; background-color: pink; margin: 0 auto; }
 			.Calendar_box h3{width: 100%; color: #fff; text-align: center; float: left; font-size: 90px; margin: 50px 0 0 0px;}
 			.Calendar_box table{border: 1px solid #eee; border-radius: 15px; background-color: #fff; float: left; margin: 90px 0 0 140px;}
 			.Calendar_box th{padding: 10px 10px;}
